feat(mentor): create documentation for get mentor details endpoint
